htoolsincludedir = $(includedir)/htoolbox

htoolsinclude_HEADERS = \
  asyncwriter.h \
  configuration.h \
  copier.h \
  filereaderwriter.h \
  files.h \
  hasher.h \
  ireaderwriter.h \
  linereaderwriter.h \
  multiwriter.h \
  nullwriter.h \
  observer.h \
  queue.h \
  report.h \
  share.h \
  socket.h \
  stackhelper.h \
  tlv.h \
  threads_manager.h \
  zipper.h \
  $(NULL)

EXTRA_DIST = \
  asyncwriter.h \
  configuration.h \
  copier.h \
  filereaderwriter.h \
  files.h \
  hasher.h \
  ireaderwriter.h \
  linereaderwriter.h \
  multiwriter.h \
  nullwriter.h \
  observer.h \
  queue.h \
  report.h \
  share.h \
  socket.h \
  stackhelper.h \
  tlv.h \
  threads_manager.h \
  zipper.h \
  $(NULL)
