AM_CXXFLAGS = \
  -I../include \
  $(NULL)

lib_LTLIBRARIES = libhtoolbox.la

libhtoolbox_la_LDFLAGS= -version-info $(LIB_VERSION)

libhtoolbox_la_SOURCES = \
  asyncwriter.cpp \
  configuration.cpp \
  copier.cpp \
  criticality.cpp \
  files.cpp \
  filereaderwriter.cpp \
  hasher.cpp \
  linereaderwriter.cpp \
  multiwriter.cpp \
  observer.cpp \
  queue.cpp \
  report.cpp \
  share.cpp \
  socket.cpp \
  tlv.cpp \
  tlv_helper.cpp \
  threads_manager.cpp \
  zipper.cpp \
  $(NULL)
