htoolsincludedir = $(includedir)/htools

htoolsinclude_HEADERS = \
  asyncwriter.h \
  configuration.h \
  copier.h \
  filereaderwriter.h \
  files.h \
  hasher.h \
  ireaderwriter.h \
  linereaderwriter.h \
  multiwriter.h \
  nullwriter.h \
  queue.h \
  report.h \
  share.h \
  stackhelper.h \
  unix_socket.h \
  unzipreader.h \
  work_scheduler.h \
  zipwriter.h \
  $(NULL)

EXTRA_DIST = \
  asyncwriter.h \
  buffer.h \
  configuration.h \
  copier.h \
  filereaderwriter.h \
  files.h \
  hasher.h \
  ireaderwriter.h \
  linereaderwriter.h \
  multiwriter.h \
  queue.h \
  share.h \
  stackhelper.h \
  unix_socket.h \
  unzipreader.h \
  work_scheduler.h \
  zipwriter.h \
  $(NULL)
