AM_CXXFLAGS = \
  -I../include \
  $(NULL)

lib_LTLIBRARIES = libhtools.la

libhtools_la_LDFLAGS= -version-info $(LIB_VERSION)

libhtools_la_SOURCES = \
  asyncwriter.cpp \
  configuration.cpp \
  files.cpp \
  filereaderwriter.cpp \
  hasher.cpp \
  linereaderwriter.cpp \
  multiwriter.cpp \
  queue.cpp \
  report.cpp \
  share.cpp \
  unzipreader.cpp \
  work_scheduler.cpp \
  zipwriter.cpp \
  $(NULL)
